--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "antd": "^5.27.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13",
-    "vite-plugin-svgr": "^4.5.0"
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
