feat(ui): 重构聊天界面组件并添加shadcn/ui组件库
重构聊天输入组件，使用shadcn/ui的Select和Textarea组件替换antd组件
添加ModelSelect组件和AI发送图标
配置shadcn/ui所需的依赖和路径映射
更新样式文件支持暗黑模式

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,12 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  // 路径映射配置 npx shadcn@latest不会识别到tsconfig.app.json
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  }
 }
